--- a/product_details.html
+++ b/product_details.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Produk Detail | YOI Store</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
@@ -59,6 +58,8 @@
                 <h4>70.000 IDR</h4>
                 <select>
                     <option>Select Size</option>
+                    <option>XXXXL</option>
+                    <option>XXXL</option>
                     <option>XXL</option>
                     <option>XL</option>
                     <option>L</option>
@@ -78,7 +79,7 @@
     <div class="small-container">
         <div class="row row-2">
             <h2>Produk Serupa</h2>
-            <p>Lihat Lainnya    </p>
+            <p>Lihat Lainnya </p>
         </div>
     </div>
     <!-- Products -->
@@ -164,11 +165,11 @@
     <script>
         var MenuItems = document.getElementById("MenuItems");
         MenuItems.style.maxHeight = "0px";
+
         function menutoggle() {
             if (MenuItems.style.maxHeight == "0px") {
                 MenuItems.style.maxHeight = "200px"
-            }
-            else {
+            } else {
                 MenuItems.style.maxHeight = "0px"
             }
         }
@@ -179,19 +180,18 @@
         var ProductImg = document.getElementById("ProductImg");
         var SmallImg = document.getElementsByClassName("small-img");
 
-        SmallImg[0].onclick = function () {
+        SmallImg[0].onclick = function() {
             ProductImg.src = SmallImg[0].src;
         }
-        SmallImg[1].onclick = function () {
+        SmallImg[1].onclick = function() {
             ProductImg.src = SmallImg[1].src;
         }
-        SmallImg[2].onclick = function () {
+        SmallImg[2].onclick = function() {
             ProductImg.src = SmallImg[2].src;
         }
-        SmallImg[3].onclick = function () {
+        SmallImg[3].onclick = function() {
             ProductImg.src = SmallImg[3].src;
         }
-
     </script>
 </body>
 
